2006-02-23  Derek Atkins  <derek@ihtfp.com>

	* src/import-export/qif-import/test/Makefile.am:
	  add QOF_LIBS to link line because debian libtool is broken.
	
2006-02-22  Derek Atkins  <derek@ihtfp.com>

	* src/gnome/gnc-plugin-page-register.c:
	  include gtk-compat.h so we build against gtk-2.4.

	* src/gnome-utils/Makefile.am:
	  force a build from svn to have access to svn version info.
	  this might break the broken ebuild that forcibly removes the
	  .svn directories, but the ebuild is broken and shouldn't do that.

2006-02-22  David Hampton  <hampton@employees.org>

	* src/gtk-compat.h:
	* src/gnome/gnc-plugin-page-register.c: Cleanup patch from Andreas
	Köhler.

	* src/register/ledger-core/split-register.[ch]:
	* src/register/ledger-core/split-register-control.c:
	* src/gnome/gnc-plugin-page-register.c: Provide a callback whereby
	the core register code can tell the upper layers that it has moved
	from an expanded transaction to a collapsed transaction.  This
	lets the upper layer adjust the "split" transaction toolbar button
	properly.  Fixes 332165.

2006-02-21  David Hampton  <hampton@employees.org>

	* src/gnome/gnc-plugin-page-register.c: Fix from Andreas Köhler to
	deactivate the toolbar split button in an auto-split register.
	Fixes 330621.

	* src/gnome-utils/gnc-tree-model-account.c: Two fixes from Andreas
	Köhler.  One fixes 331183, the problem where editing a top-level
	account doesn't set the current parent.

2006-02-21  Joshua Sled  <jsled@asynchronous.org>

	* lib/libqof/qof/qofevent.[ch] (QOF_DEFAULT_EVENT_LIMIT): rename, set
	to reasonable value (the last-defined event).

	* src/register/ledger-core/split-register-load.c
	(gnc_split_register_load): Ensure that a (unique) relevent split
	from the currently-pending transaction is always in the split list
	before we load it, preventing transactions from disappearing from
	a register while being edited, but without saving the entire (and